--- a/src/app/global.css
+++ b/src/app/global.css
@@ -2,7 +2,11 @@ button {
   border: none;
   border-radius: 4px;
   padding: 4px 8px;
-  font-size: 18px;
-  background-color: lawngreen;
-  color: white;
+  font-size: 15px;
+  padding: 10px;
+  background-color: white;
+}
+
+* {
+  margin: 0;
 }
