--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -4,5 +4,39 @@
 }
 
 .list li {
-  font-size: 14px;
+  margin-top: 30px;
+  font-size: 20px;
+}
+
+.list li p {
+  font-size: 15px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.link {
+  font-weight: bold;
+  font-size: 40px;
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 82, 246, 0.787);
+  color: white;
+}
+
+.box {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 80%;
+  width: 50%;
 }
