li -> ul 및 스타일 수정

--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -84,13 +84,21 @@
   flex: 4;
 }
 .bottomBox h1 {
-  margin: 0 0 10px 50px;
+  margin: 0 0 30px 50px;
+}
+.bottomBox ul {
+  padding: 0;
+  font-weight: 700;
+  font-size: 20px;
 }
 .bottomBox li {
   margin: 10px 0 10px 20px;
-  font-weight: 700;
+  padding: 0;
+  font-weight: 500;
+  font-size: 15px;
   list-style: circle;
 }
+
 .day {
-  margin: 0 0 30px 30px;
+  margin: 0 0 30px 50px;
 }
