날씨에 따른 배경 전환

--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-image: url("../asset/clear.jpg"); /* 이미지 경로에 맞게 수정해주세요 */
   background-size: cover;
   color: white;
 }
@@ -101,4 +100,13 @@
 
 .day {
   margin: 0 0 30px 50px;
+}
+
+.backgroundImg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1; /* 다른 요소 위에 표시되도록 순서를 뒤로 보냅니다 */
 }
