글꼴 변경 & <a>스타일 변경

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,12 +1,29 @@
-button {
-  border: none;
-  border-radius: 4px;
-  padding: 4px 8px;
-  font-size: 15px;
-  padding: 10px;
-  background-color: white;
+/* 교보문고 글꼴 */
+@font-face {
+  font-family: "KyoboHand";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
   margin: 0;
+  padding: 0;
+  font-family: "KyoboHand", sans-serif;
+}
+
+button {
+  border: none;
+  border-radius: 4px;
+  background-color: white;
+}
+
+a {
+  color: #0070f3; /* 링크의 기본 색상 변경 */
+  text-decoration: none; /* 밑줄 제거 */
+}
+
+a:hover {
+  color: #004080; /* 링크에 호버될 때 색상 변경 */
 }
