--- a/src/app/[location]/style.module.css
+++ b/src/app/[location]/style.module.css
@@ -110,3 +110,33 @@
   height: 100vh;
   z-index: -1; /* 다른 요소 위에 표시되도록 순서를 뒤로 보냅니다 */
 }
+@media (max-width: 1000px) {
+  .container {
+    flex-direction: column;
+  }
+  .mainDiv {
+    width: 100vw;
+    height: 70vh;
+  }
+  .sideBar {
+    width: 100vw;
+    height: 30vh;
+    flex-direction: row;
+  }
+  .topBox {
+    flex: 1;
+  }
+  .bottomBox {
+    flex: 2;
+    flex-direction: column;
+  }
+  .day {
+    flex-direction: row;
+  }
+  .dayDiv {
+    display: flex;
+  }
+  .bottomBox h1 {
+    margin: 0 0 20px 50px;
+  }
+}
