--- a/src/app/global.css
+++ b/src/app/global.css
@@ -13,17 +13,11 @@
   font-family: "KyoboHand", sans-serif;
 }
 
-button {
-  border: none;
-  border-radius: 4px;
-  background-color: white;
-}
-
 a {
-  color: #0070f3; /* 링크의 기본 색상 변경 */
+  color: rgb(0 255 0); /* 링크의 기본 색상 변경 */
   text-decoration: none; /* 밑줄 제거 */
 }
 
 a:hover {
-  color: #004080; /* 링크에 호버될 때 색상 변경 */
+  color: rgba(0, 255, 0, 0.5); /* 링크에 호버될 때 색상 변경 */
 }
