--- a/src/app/[location]/style.module.css
+++ b/src/app/[location]/style.module.css
@@ -9,7 +9,7 @@
 }
 
 .mainDiv {
-  width: 75vw;
+  width: 80vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@
 }
 
 .sideBar {
-  width: 25vw;
+  width: 20vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -61,7 +61,7 @@
 }
 
 .topBox {
-  flex: 2;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,27 +71,28 @@
 .bottomBox {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   width: 100%;
   flex: 4;
-}
-.bottomBox h1 {
-  margin: 0 0 30px 50px;
-}
-.bottomBox ul {
   padding: 0;
-  font-weight: 700;
-  font-size: 20px;
-}
-.bottomBox li {
-  margin: 10px 0 10px 20px;
-  padding: 0;
-  font-weight: 500;
-  font-size: 15px;
-  list-style: circle;
+  margin: 0;
 }
 
-.dayList {
-  margin: 0 0 30px 50px;
+.bottomBox ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+}
+.bottomBox li {
+  list-style: none;
+  margin-top: 5px;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1px;
 }
 
 .backgroundImg {
@@ -108,27 +109,23 @@
   }
   .mainDiv {
     width: 100vw;
-    height: 70vh;
+    height: 75vh;
   }
   .sideBar {
     width: 100vw;
-    height: 30vh;
-    flex-direction: row;
+    height: 25vh;
+    flex-direction: column;
   }
   .topBox {
-    flex: 1;
+    display: none;
   }
   .bottomBox {
     flex: 2;
-    flex-direction: column;
-  }
-  .day {
     flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
   }
-  .dayDiv {
-    display: flex;
-  }
-  .bottomBox h1 {
-    margin: 0 0 20px 50px;
+  .bottomBox ul {
+    margin: 0;
   }
 }
