사이드바 애니메이션 추가

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -24,3 +24,9 @@ a {
 a:hover {
   color: rgba(0, 255, 0, 0.5); /* 링크에 호버될 때 색상 변경 */
 }
+
+@media (max-width: 1000px) {
+  * {
+    font-size: 90%;
+  }
+}
