--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -56,8 +56,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
+  /* Additional New Formalism style attributes can be added here */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  transition: all 0.1s ease-in-out;
+}
+
+.sideBar:hover {
+  /* Additional styles for hover effect in New Formalism */
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
 .topBox {
@@ -126,6 +134,9 @@
   .mainDiv {
     width: 100vw;
     height: 75vh;
+  }
+  .firstBox :first-child {
+    font-size: 60px;
   }
   .sideBar {
     width: 100vw;
