ul 애니메이션 추가

--- a/src/app/style.module.css
+++ b/src/app/style.module.css
@@ -23,10 +23,12 @@
   flex-direction: column;
   margin: 10px;
 }
+
 .firstBox :first-child {
   font-size: 80px;
   font-weight: 1000;
 }
+
 .firstBox :last-child {
   font-size: 50px;
   margin-left: 10px;
@@ -110,6 +112,11 @@
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 50px;
+  transition: transform 0.3s ease-in-out;
+}
+.bottomBox ul:hover {
+  /* Adding horizontal rotation effect on hover */
+  transform: scale(1.1);
 }
 .bottomBox li {
   list-style: none;
