--- a/src/app/[location]/style.module.css
+++ b/src/app/[location]/style.module.css
@@ -27,6 +27,7 @@
   font-size: 80px;
   font-weight: 1000;
 }
+
 .firstBox :last-child {
   font-size: 50px;
   margin-left: 10px;
@@ -94,7 +95,13 @@
   font-weight: 700;
   font-size: 1.5rem;
   margin-bottom: 50px;
+  transition: transform 0.3s ease-in-out;
 }
+.bottomBox ul:hover {
+  /* Adding horizontal rotation effect on hover */
+  transform: scale(1.1);
+}
+
 .bottomBox li {
   list-style: none;
   margin-top: 5px;
